test/files/neg/t5091.check
t5091.scala:8: error: recursive value xxx needs type
    val param = bar(xxx)
                    ^
t5091.scala:7: warning: failed to determine if 'param = ...' is a named argument or an assignment expression.
an explicit type is required for the definition mentioned in the error message above.
    val xxx = foo(param = null)
                        ^
one warning found
one error found
